# sgidisk

./: Cargo.toml
reference/: dvh.h  efs.man  efs_dir.h  efs_fs.h  efs_ino.h  efs_inode.h  efs_sb.h  inode.man  vh.man
sgidisklib/: Cargo.toml
sgidisklib/src/: lib.rs
sgidisklib/src/efs/: dir.rs  mod.rs  raw_dir.rs  raw_inode.rs  raw_sb.rs
sgidisklib/src/volhdr/: mod.rs  raw.rs
sgidisktool/: Cargo.toml
sgidisktool/src/: cli.yaml  exit_codes.rs  hash.rs  main.rs
sgidisktool/src/efs/: mod.rs
sgidisktool/src/vh/: cp.rs  info.rs  mod.rs
